--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+<title>BDSM Daddy</title>
+</head>
+<body style="background-color:black;">
+
+<h1 style="color:Red;">BDSM Daddy for rent</h1>
+
+<br>
+
+<h2 style="color:Grey;">Introduction</h2>
+<p style="color:LightGray;">Welcome. I offer touch and BDSM services. All sessions are agreed upon beforehand.</p>
+
+<br>
+
+<h2 style="color:Grey;">Contact information</h2>
+<p style="color:LightGray;">email</p>
+<p style="color:LightGray;">signal</p>
+
+<br>
+
+<h2 style="color:Grey;">Services</h2>
+<p style="color:LightGray;">BDSM (Shibari, bondage, toy play, etc...)</p>
+<p style="color:LightGray;">Cosplay and roleplay (Costume requests ok)</p>
+<p style="color:LightGray;">Touch and aftercare</p>
+<p style="color:LightGray;">Escorting</p>
+
+<br>
+
+<h2 style="color:Grey;">Prices</h2>
+<p style="color:LightGray;">50€/20min (Minimum payment is 40 minutes: 100€)</p>
+
+<br>
+
+<h2 style="color:Grey;">How this works</h2>
+<p style="color:LightGray;">You contact me and tell me what you desire. We agree upon what happens during the session beforehand, and the duration of the session. Consent and communication are important for both of our safety. I cannot read your mind. Payment upfront in cash on arrival.</p>
+
 </body>
 </html>
